# ansys-agent

./: .gitignore  ANSYS_AGENT.md  CLAUDE.md  PI_AGENT.md  README.md  pyproject.toml
config/: benchmark_config.json  demo_config.example.json  stage_b_nodes.json
docs/: aedt-agent-executive-report.md  aedt-agent-stage-c-progress-report.md  aedt-agent-stage-progress-report.md  aedt-desktop-claude-entry.md  ansys-assistant-operations-guide.zh.md  ansys-assistant-user-guide.zh.md  ansys-capability-evolution.md  ansys-mcp-comparison-2026-07-17.md  ansys_agent_rfc_design_v1.md  antipad-harness.zh.md  brd-experimental-workflow.md  homerail-2026-07-reassessment-and-implementation.md  homerail-runtime-council-conclusion.md  homerail-runtime-lessons.md  interactive-ansys-assistant.md  linux-aedt-assistant.zh.md  offline-windows-server-deployment.md  open-aedt-execution-acceptance.zh.md  orchestrator-worker-architecture.zh.md  pi-integration-evaluation-gate.md  real-brd-solve-smoke.md  remote-reviewed-model-loop.md  remote-windows-server-usage.zh.md  stage-b-controlled-node-benchmark.md  stage-c1-demo-readme.md  validation-script-spec.md
scripts/: analyze_stage_c_recorded_workflow.py  build_stage_b_report.py  check_contract_stabilization.py  check_stage_c_demo_environment.py  compare_stage_c_channel.py  diagnose_tdr_solution_data.py  generate_brd_optimization_report.py  generate_node_evolution_report.py  generate_node_evolution_review.py  generate_stage_c_demo_index.py  generate_stage_c_smoke_dashboard.py  generate_stage_c_workflow_expansion_report.py  list_node_catalog.py  list_workflow_templates.py  package_stage_c_brd_run.py  plan_workflow_from_chat.py  run_mcp_real_smoke.py  run_stage_a_benchmark.py  run_stage_b_benchmark.py  run_stage_c1_demo_server.py  run_stage_c2_planner_benchmark.py  run_stage_c5_local_cut_build.py  run_stage_c5_recorded_build.py  run_stage_c_brd_acceptance.py  run_stage_c_import_cutout.py  run_stage_c_real_workflow_smoke.py  run_workflow_template.py  score_stage_c_channel.py  smoke_reviewed_loop_fake_solve.py  smoke_ssh_channel_score.py  smoke_ssh_real_solve_score.py  summarize_via_copper_patterns.py
tests/: __init__.py  test_aedt_desktop_integration.py  test_aedt_executor.py  test_agent_action_approval.py  test_agent_action_contracts.py  test_agent_action_store.py  test_agent_approval_service.py  test_agent_artifact_query.py  test_agent_artifact_query_service.py  test_agent_artifact_retention.py  test_agent_brd_candidate_inventory_worker.py  test_agent_brd_channel_score_worker.py  test_agent_brd_evidence_compare.py  test_agent_brd_export_workers.py  test_agent_brd_geometry_validate_worker.py  (+194 more)
(+548 files in other folders)
