[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aedt-agent"
version = "0.1.0"
description = "Goal-driven Agent runtime for controlled Ansys AEDT engineering workflows"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
mcp = [
    "fastmcp>=2.0.0",
]

[project.scripts]
aedt-agent = "aedt_agent.agent.cli:main"
aedt-pi-agent = "aedt_agent.pi_agent.__main__:main"
aedt-agent-v0 = "aedt_agent.v0.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
