[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aedt-agent"
version = "0.2.0"
description = "Goal-driven Agent runtime for controlled Ansys AEDT engineering workflows"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "scikit-rf>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
mcp = [
    "fastmcp==3.4.4",
]
aedt = [
    "pyaedt==1.3.0",
    "pyedb[dotnet]==0.80.2",
]
desktop = [
    "pyaedt==1.3.0",
    "pyedb[dotnet]==0.80.2",
    "fastmcp==3.4.4",
    "codebase-memory-mcp==0.9.0",
    "pytest>=8.0.0",
]
knowledge = [
    "codebase-memory-mcp==0.9.0",
    "fastmcp==3.4.4",
]

[project.scripts]
aedt-agent = "aedt_agent.agent.cli:main"
ansys-agent = "aedt_agent.ansys_agent.__main__:main"
ansys-assistant = "aedt_agent.interactive.cli:main"
ansys-assistant-mcp = "aedt_agent.interactive.server:main"
ansys-agent-desktop = "aedt_agent.desktop.cli:main"
ansys-api-memory = "aedt_agent.knowledge.api_memory_cli:main"
ansys-api-memory-mcp = "aedt_agent.knowledge.server:main"
ansys-capability-promoter = "aedt_agent.capability_learning.cli:main"
aedt-agent-v0 = "aedt_agent.v0.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
